@@ -12,8 +12,7 @@ server.
 
 This package is currently in a limited but useful stage.  It can do
 directory listings and store and retrieve files using either PASV or
-PORT mode.  It does not have an anonymous login feature, but it's in the
-plans.
+PORT mode.
 
 A mailing list has been set up to discuss this and other packages.
 To subscribe, send an email to:
@@ -23,13 +22,15 @@ Programs:
 
 The package is broken down into two main programs: twoftpd-auth is a
 front-end that only accepts USER and PASS (and a few other "built-in")
-commands.  Once a user is authenticated, it exec's twoftpd-xfer, which
-does a chdir/chroot/setgid/setuid combination to lock down all
-priviledges.
+commands.  Once a user is authenticated, it exec's twoftpd-xfer (or
+twoftpd-anon), which does a chdir/chroot/setgid/setuid combination to
+lock down all priviledges.  twoftpd-anon differs from twoftpd-xfer by
+not having any commands available that can make filesystem changes.
 
 Usage:
 
-tcpserver -v 0 21 /usr/local/bin/twoftpd-auth /usr/local/bin/twoftpd-xfer
+tcpserver -v 0 21 /usr/local/bin/twoftpd-auth \
+	/usr/local/bin/twoftpd-xfer -- /usr/local/bin/twoftpd-anon
 
 Known bugs:
 
