@@ -1,4 +1,6 @@
 #!/bin/sh
 exec 2>&1
 exec envdir /etc/twoftpd tcpserver -DRHv -llocalhost 0 21 \
-	/usr/bin/twoftpd-auth /usr/bin/twoftpd-xfer
+	/usr/bin/twoftpd-auth \
+	/usr/bin/twoftpd-xfer -- \
+	/usr/bin/twoftpd-anon
